2012-08-07 Roman
- SYS.TVariant: Simple TVarObj object create at request to empty object. At further going to replaced for TEvalObj.


2012-08-04 Roman
- DAQ.Comedi: Asynchronous acquisition is added. Analog inputs A/D conversion settle timeout is added.
- DAQ.ICP_DAS: Acquisition schedule by cron is added. DIO reverse allow is added for DIO144.
- !!:Transport.SSL: Connection procedure into TSocketOut::start() has rewited for use configured timeout for connection.
- UI.VCAEngine: Modify flag clear after on demand loading/enable.


2012-08-01 Roman
- FIX:DAQ.Comedi: Ranges selection into Disable parameter's mode is fixed and tested on PCL-813.


2012-07-31 Roman
- FIX:DB: Into vcaBase.db the button "Play demo" hide for empty demo scenario.
    Into OscadaLibs.db EVAL pass for templates "anUnif" and "anUnifSt" is added.
- !!:UI.VCAEngine: Widgets of library and project on demand loading/enable is added.
    Allow more faster into Runtime mode start and lesser memory consumption for load only used projects and widgets.


2012-07-29 Roman
- SYS: DAQ.Comedi is added to RPM build spec-file openscada_mod.spec.
- SYS: Libraries "Phonon" and "QTWebKit" using force disable is added for without build to pure environments with litle memory set.
- FIX:DAQ.ICP_DAS: return into virtual function "bool DA::cntrCmdProc( TMdPrm *prm, XMLNode *opt )" is fixed.
- FIX:DB: Into vcaBase.db the archives parameters select dialog, pasport dialog is some fixed and root page is expanded for SO buttons placement tune.
- UI.Vision: Widget's childs update at single "geomXsc" and "geomYsc" changing is added, for full scale update to the subtree.
    setAllAttrLoad(x) use for set geometry attributes group into DevelWdgView::saveGeom() function.


2012-07-28 Roman
- !!:FIX:SYS: Real task creation from high priority thread at some Linux kernels, for example 2.6.29, is fixed by replace wait call
    sched_yield() to TSYS::sysSleep(1e-3).